--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 ######Hibernate Properties For Testing######
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Europe/Moscow&characterEncoding=UTF-8
-spring.datasource.username=VladSin
-spring.datasource.password=VladSinSQL_8022
-spring.datasource.driver-class=com.mysql.cj.jdbc.Driver;
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Europe/Moscow&characterEncoding=UTF-8
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.datasource.driver-class=com.mysql.cj.jdbc.Driver;
 spring.jpa.hibernate.ddl-auto=create
