--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 ######Hibernate Properties For Testing######
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Europe/Moscow&characterEncoding=UTF-8
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.datasource.driver-class=com.mysql.cj.jdbc.Driver;
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=create
